<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iggy.backpacking.InfoDrawerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Information"
                android:textSize="20sp"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textAllCaps="true" />

            <TextView
                android:text="@string/elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Elevation"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginTop="7dp"
                android:textStyle="normal|bold|italic" />

            <TextView
                android:text="@string/elevation_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Elevation_Info" />

            <TextView
                android:text="@string/rainfall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Rainfall"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="5dp"
                android:textStyle="normal|bold|italic" />

            <TextView
                android:text="@string/rainfall_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Rainfall_Info" />

            <TextView
                android:text="@string/temperatures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Temperatures"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="5dp"
                android:textStyle="normal|bold|italic" />

            <TextView
                android:text="@string/temperatures_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Temperatures_Info" />

            <TextView
                android:text="@string/industries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Industries"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="5dp"
                android:textStyle="normal|bold|italic" />

            <TextView
                android:text="@string/industries_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Industries_Info" />

            <TextView
                android:text="@string/soils"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Soils"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="5dp"
                android:textStyle="normal|bold|italic" />

            <TextView
                android:text="@string/soils_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Soils_Info" />

            <TextView
                android:text="@string/soils_info_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Soils_Info_1"
                android:layout_marginTop="3dp"/>

            <TextView
                android:text="@string/soils_info_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Soils_Info_2"
                android:layout_marginTop="3dp"/>

            <TextView
                android:text="@string/other_crops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Other_Crops"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:textColor="@android:color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:text="@string/other_crops_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Other_Crops_Info" />

            <TextView
                android:text="@string/time_to_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Time_To_Call"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="normal|bold" />



        </LinearLayout>
    </ScrollView>




</RelativeLayout>
